[package]
name = "amhs-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = "0.37"
regex = "1"
rayon = "1.10"
crossbeam-channel = "0.5"
memmap2 = "0.9"
colored = "3"
comfy-table = "7"
chrono = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
